--- a/css/sitewide.css
+++ b/css/sitewide.css
@@ -30,7 +30,7 @@ body {
 	font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 32px;
 	line-height: 1.5em;
-	color: #222;
+	color: #7FFFD4;
 }
 
 /*	Generally, you will only want one container element in
