--- a/css/sitewide.css
+++ b/css/sitewide.css
@@ -31,6 +31,7 @@ body {
 	font-size: 16px;
 	line-height: 1.5em;
 	color: #222;
+	background-image: url(grid-797352_960_720.jpg);
 }
 
 /*	Generally, you will only want one container element in
