--- a/css/sitewide.css
+++ b/css/sitewide.css
@@ -30,8 +30,8 @@ body {
 	font-family: Copperplate, "Copperplate Gothic Light", fantasy;
 	font-size: 16px;
 	line-height: 1.5em;
-	color: #222;
-	background-image: url(grid-797352_960_720.jpg);
+	color: #FF0000;
+	
 }
 
 /*	Generally, you will only want one container element in
