--- a/css/sitewide.css
+++ b/css/sitewide.css
@@ -30,7 +30,7 @@ body {
 	font-family: Copperplate, "Copperplate Gothic Light", fantasy;
 	font-size: 16px;
 	line-height: 1.5em;
-	color: #FF0000;
+	color: #000000;
 	
 }
 
